Fixed Select tag

--- a/web/createBuilding.html
+++ b/web/createBuilding.html
@@ -46,10 +46,12 @@
           <div class="field">
             <label class="label">Campus</label>
             <div class="control">
-              <select>
+              <div class="select">
+                <select>
                   <option>Choose your Campus</option>
                   <option>Another Option</option>
-              </select>
+                </select>
+              </div>
             </div>
           </div>
           <div class="field level">
